--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -50,7 +50,7 @@
       <div class="contactsSecondRow">
         
       </div>
-      <div id="map"><img src="/scoots/images/placeholder.png"></div>
+      <div id="map"><img src="/scoots/images/placeholder.png" alt="placeholder"></div>
       </div> 
     </div>  
     <div class="socialIcons">
