--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -77,7 +77,7 @@
     </div>
         <div class="newFeedback">
             
-            <form method="get" action="reserve.html">
+            <form>
                 <fieldset>
                     <legend>Still have questions?</legend>
                     <label class="first">Your name: <input type="text" name="name" title="Just letters, 2 characters min" pattern="[A-Za-z\s]{2,}" required></label>
